<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.post">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:src="@drawable/ic_baseline_add_a_photo_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/product_name"
                    android:layout_width="306dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/product_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/price"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/price"
                    android:inputType="phone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

               <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/description"
                   android:paddingBottom="40dp"
                      />







                <TextView
                    android:id="@+id/txtBrands"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:drawable/edit_text"
                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                    android:drawablePadding="16dp"
                    android:gravity="center"
                    android:visibility="gone"

                    android:hint="@string/select_brand"
                    />




            </LinearLayout>

            <Spinner
                android:id="@+id/categoriesSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:spinnerMode="dropdown" />

            <ProgressBar
                android:id="@+id/progressBarCategory"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:scrollbarSize="2dp" />

            <Spinner
                android:id="@+id/subCategoriesSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:spinnerMode="dropdown"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtSubCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:drawable/editbox_background"
                android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                android:drawablePadding="16dp"
                android:gravity="center"
                android:hint="@string/select_category"
                android:visibility="gone" />







<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="vertical">-->

<!--                    <androidx.recyclerview.widget.RecyclerView-->
<!--                        android:id="@+id/rvGroup"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_margin="20dp"-->
<!--                        android:layout_height="wrap_content" />-->
<!--                </LinearLayout>-->


            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/cardview_default_elevation"
                android:text="@string/send"
                android:textStyle="bold" />
            <Button
                android:id="@+id/go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/cardview_default_elevation"
                android:text="@string/update_categories"
                android:textStyle="bold" />
            <Button
                android:id="@+id/addBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/cardview_default_elevation"
                android:text="@string/add_brands"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/cardview_default_elevation"
                android:text="@string/add_category"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/cardview_default_elevation"
                android:text="@string/add_brand"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>