<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="4dp"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    app:layout_constraintCircleRadius="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCodesList"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/coupon" />

            <TextView
                android:id="@+id/priceCodesListt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:width="100dp"
                android:layout_margin="15dp"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/price" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnCodesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"

                android:text="@string/copy" />

            <Button
                android:id="@+id/btnCodesDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/delete" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>